adds lorem buttons

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <header>
     <h1>Welcome to My Website</h1>
   </header>
+  <div id="controls"></div>
+
   <div id=editor style="margin-bottom: 23px"></div>
 
   <div style="display: none" id="content">
