--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
   <header>
     <h1>Welcome to My Website</h1>
   </header>
-  <div id="controls"></div>
-
-  <div id=editor style="margin-bottom: 23px"></div>
+  <div id="root"></div>
 
   <div style="display: none" id="content">
     <h3>Hello ProseMirror</h3>
